Fixed text alignment and font

--- a/applesiliconcompatibility/css/main.css
+++ b/applesiliconcompatibility/css/main.css
@@ -48,7 +48,7 @@ a:hover {
 
 /* ------------------------------------ */
 h1 {
-  font-size:5.5vmin;
+  font-size:7vmin;
   color: rgba(24, 24, 24, 0.842);
 }
 
